src/test/ui/impl-trait/bindings.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:5:29
   |
LL |     const foo: impl Clone = x;
   |           ---               ^ non-constant value
   |           |
   |           help: consider using `let` instead of `const`

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:11:33
   |
LL |         const foo: impl Clone = x;
   |               ---               ^ non-constant value
   |               |
   |               help: consider using `let` instead of `const`

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:18:33
   |
LL |         const foo: impl Clone = x;
   |               ---               ^ non-constant value
   |               |
   |               help: consider using `let` instead of `const`

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:25:33
   |
LL |         const foo: impl Clone = x;
   |               ---               ^ non-constant value
   |               |
   |               help: consider using `let` instead of `const`

warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bindings.rs:1:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0435`.
